--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ LA PROXIMA ACTUALIZACIÓN Y DESCUBRIR como continua la historia!</p>
       img.src = "img/anuncio.png";
       img.alt = "Anuncio de lanzamiento";
     } else if (weeksPassed === 1) {
-      img.src = "img/vin1.jpg";
+      img.src = "img/vin1.png";
       img.alt = "Viñeta 1";
     } else {
       img.src = "img/anuncio.png";
