--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@ LA PROXIMA ACTUALIZACIÓN Y DESCUBRIR como continua la historia!</p>
   if (weeksPassed < 1) {
     comicDiv.appendChild(crearImg("img/anuncio.png", "Anuncio de lanzamiento"));
   } else if (weeksPassed === 1) {
-    comicDiv.appendChild(crearImg("img/vin1.png", "Viñeta 1"));
-    comicDiv.appendChild(crearImg("img/vin2.png", "Viñeta 2"));
+    comicDiv.appendChild(crearImg("vin1.png", "Viñeta 1"));
+    comicDiv.appendChild(crearImg("vin2.png", "Viñeta 2"));
   } else if (weeksPassed === 2) {
-    comicDiv.appendChild(crearImg("img/vin3.png", "Viñeta 3"));
-    comicDiv.appendChild(crearImg("img/vin4.png", "Viñeta 4"));
+    comicDiv.appendChild(crearImg("vin3.png", "Viñeta 3"));
+    comicDiv.appendChild(crearImg("vin4.png", "Viñeta 4"));
   } else {
     comicDiv.appendChild(crearImg("img/anuncio.png", "Anuncio de la próxima parte"));
   }
@@ -88,3 +88,4 @@ LA PROXIMA ACTUALIZACIÓN Y DESCUBRIR como continua la historia!</p>
 
 </body>
 </html>
+
