--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
   <footer class="footer">
     <div class="container footer-grid">
       <div class="social">
-        <p>Seguinos en nuestras redes sociales para ENTERARTE DE
-LA PROXIMA ACTUALIZACIÓN Y DESCUBRIR como continua la historia!</p>
+        <p>Todos los jueves y viernes actualizacion de esta historia ¡No te lo pierdas!</p>
         <ul>
           <li><a href="#">@Capresse.ex3</a></li>
         </ul>
@@ -88,4 +87,5 @@ LA PROXIMA ACTUALIZACIÓN Y DESCUBRIR como continua la historia!</p>
 
 </body>
 </html>
+
 
