--- a/index.html
+++ b/index.html
@@ -1,43 +1,41 @@
+<!DOCTYPE html>
 <html>
 <head>
   <title>Comic</title>
   <meta charset="utf-8">
   <meta name="description" content="trabajo">
-  <meta name="languaje" content="es">
+  <meta name="language" content="es">
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
- 
 </head>
+
 <body>
- <header>
-  <div class="container">
-  <h1>El origen...</h1>
-  </div>
- </header>
+  <header>
+    <div class="container">
+      <h1>El origen...</h1>
+    </div>
+  </header>
+
   <main>
     <section class="logo-section">
       <div class="container">
-        <div id="comic"></div> <!-- Contenedor de viñeta -->
+        <div id="comic"></div>
       </div>
     </section>
   </main>
 
-  <!-- FOOTER -->
   <footer class="footer">
     <div class="container footer-grid">
       <div class="social">
-        <p>Todos los jueves y viernes actualizacion de esta historia ¡No te lo pierdas!</p>
-        
+        <p>Todos los jueves y viernes actualización de esta historia ¡No te lo pierdas!</p>
       </div>
     </div>
   </footer>
 
-  <!-- BOTÓN SUBIR -->
   <button id="btnSubir" title="Volver arriba">↑</button>
 
-  <!-- SCRIPT -->
   <script>
   // ==== CÓMIC ====
   const startDate = new Date("2025-10-15");
@@ -54,17 +52,18 @@
     return img;
   }
 
-  // Mostrar viñetas según semana
+  // ==== LÓGICA DE PUBLICACIÓN ====
   if (weeksPassed < 1) {
     comicDiv.appendChild(crearImg("img/anuncio.png", "Anuncio de lanzamiento"));
-  } else if (weeksPassed === 1) {
+  } 
+  else if (weeksPassed === 1) {
     comicDiv.appendChild(crearImg("vin1.png", "Viñeta 1"));
     comicDiv.appendChild(crearImg("vin2.png", "Viñeta 2"));
-  } else if (weeksPassed === 2) {
-    comicDiv.appendChild(crearImg("vin3.png", "Viñeta 3"));
-    comicDiv.appendChild(crearImg("vin4.png", "Viñeta 4"));
-  } else {
-    comicDiv.appendChild(crearImg("img/anuncio.png", "Anuncio de la próxima parte"));
+  } 
+  else if (weeksPassed >= 2) {
+    for (let i = 0; i <= 3; i++) {
+      comicDiv.appendChild(crearImg(`COMICPARTEDOS.H${i}.PNG`, `Parte dos H${i}`));
+    }
   }
 
   // ==== BOTÓN SUBIR ====
@@ -81,10 +80,6 @@
   btnSubir.addEventListener("click", () => {
     window.scrollTo({ top: 0, behavior: "smooth" });
   });
-</script>
-
+  </script>
 </body>
-</html>
-
-
-
+  </html>
