--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <img src="vin2.png" alt="Viñeta 2">
 
         <!-- Parte 2 -->
-        <img src="COMICPARTEDOS.H0.PNG" alt="Parte dos H0">
-        <img src="COMICPARTEDOS.H1.PNG" alt="Parte dos H1">
-        <img src="COMICPARTEDOS.H2.PNG" alt="Parte dos H2">
-        <img src="COMICPARTEDOS.H3.PNG" alt="Parte dos H3">
+        <img src="COMICPARTEDOS.H0.png" alt="Parte dos H0">
+        <img src="COMICPARTEDOS.H1.png" alt="Parte dos H1">
+        <img src="COMICPARTEDOS.H2.png" alt="Parte dos H2">
+        <img src="COMICPARTEDOS.H3.png" alt="Parte dos H3">
       </div>
     </section>
   </main>
@@ -62,3 +62,4 @@
   </script>
 </body>
 </html>
+
